--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -23,7 +23,8 @@ $background-color:  #fff;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #387ef5,
+  primary:    #53a351,
+  blue:    #387ef5,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
