--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,14 +1,48 @@
 page-home {
-  img{
+  img.banner{
+    position:relative;
+    -webkit-box-flex:1;
+    -ms-flex:1 1 auto;
+    flex:1 1 auto;
+    padding:1rem;
     display:block;
     width: 100% !important;
   }
-
-  div{
+  div.vehiculo {
+    text-align: center;
+  }
+  img.vehiculo {
+    max-width:100px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  img.profile {
+    border-radius: 50%;
+    max-width:90px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  h2 {
     position:relative;
     -webkit-box-flex:1;
     -ms-flex:1 1 auto;
     flex:1 1 auto;
     padding:1rem
+  }
+  ion-icon {
+    position:relative;
+    -webkit-box-flex:1;
+    -ms-flex:1 1 auto;
+    flex:1 1 auto;
+    padding:1rem
+  }
+  ion-col.col_2 {
+    min-width:250px !important
+  }
+  div.profile {
+    text-align: center;
+    border-right: 1px solid black;
   }
 }
