--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,3 +1,22 @@
 page-login {
 
+  img.banner {
+    width: 512px;
+    height: 250px;
+    display:block;
+    margin:auto;
+    padding-bottom: 2%;
+    padding-top: 2%;
+  }
+
+  button.login_button {
+    margin:0 auto;
+    max-width:300px !important
+  }
+
+  img.example_banner {
+    display:block;
+    margin:auto;
+  }
+
 }
